# tmp

./: .gitignore  Cargo.toml  Makefile.toml  README.md
dc-flink/: .gitignore  docker-compose.yml  q14.txt  q4.txt  tpch-modified-sinks.template.yaml  tpch-sources.sql
dc-risingwave/: docker-compose.yml  q14.txt  q4.txt  tpch-modified-sinks.template.yaml  tpch-sources.sql  tpch-tables.sql
js/: gh.js  package-lock.json  package.json
kafka/: .gitignore  README.md
kafka-produce/: Cargo.toml  a.sql
kafka-produce/src/: main.rs
ocaml_hello/: dune-project
ocaml_hello/lib/: dune  my_mod.ml  ocaml_hello.ml
ocaml_hello/test/: dune
python/: draw.ipynb
rust/: .gitignore  Cargo.toml  Makefile.toml  README.md  clippy.toml
rust/.cargo/: config.toml
rust/.config/: nextest.toml
rust/arrow/: flight.rs
rust/aws_sdk/: Cargo.toml  aws_sdk.rs
rust/aws_sdk/src/: main.rs
rust/benches/: a.rs  async.rs
rust/kafka/: Cargo.toml
rust/kafka/src/: main.rs
rust/src/: a_file_without_module.rs
rust/src/utils/src/: lib.rs
rust/src/wasm-component/: Cargo.toml
rust/src/wasm-component/src/: lib.rs
rust/src/wasm-evil/: Cargo.toml
rust/src/wasm-evil/src/: lib.rs
rust/wasm/: wasmtime.rs
rust/wit/: hello.wit
src/: lib.rs
src/utils/: Cargo.toml
src/utils/src/: lib.rs
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
test_only/: Cargo.toml
test_only/tests/: it.rs
vue-project/src/: App.vue
vue-project/src/components/: BaseCounter.vue  UserCard.vue
wit/: hello.wit
