[package]
name = "rust-tmp"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src/wasm"]

[profile.release]
debug = true
lto = 'thin'

[profile.dev]
lto = "thin"

[dependencies]
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "process",
] }
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", rev = "97db777" }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"
hyper = { version = "0.14", features = ["server", "http2", "tcp", "http1"] }
rsa = "0.8.2"
rand = "0.8.5"
regex = "1.7.3"

arrow-array = "36"
arrow-flight = "36"
arrow-schema = "36"
arrow-select = "36"


env_logger = "0.10.0"
futures = "0.3.27"
log = "0.4.17"
rdkafka = { version = "0.29.0", features = ["ssl"] }
dotenv = "0.15.0"

simd-json = "0.9"

[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "a"
harness = false

[patch.crates-io]
# simd-json = { path = "../simd-json" }
