[package]
name = "rust-tmp"
version = "0.1.114514"
edition = "2021"

[workspace]
members = ["src/wasm-component", "src/utils"]

[profile.release]
debug = true
lto = 'thin'

[dependencies]
utils = { path = "src/utils" }

tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "process",
] }
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", rev = "97db777" }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"
hyper = { version = "0.14", features = ["server", "http2", "tcp", "http1"] }
rsa = "0.8.2"
rand = "0.8.5"
regex = "1.7.3"

arrow-array = "40"
arrow-flight = "40"
arrow-schema = "40"
arrow-select = "40"


env_logger = "0.10.0"
futures = "0.3.27"
log = "0.4.17"
rdkafka = { version = "0.29.0", features = ["ssl"] }
dotenv = "0.15.0"


simd-json = "0.10"


wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "5b93cdb", features = [
    "component-model",
] }
# We need preview2-prototyping https://github.com/bytecodealliance/wasmtime/pull/6391
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "5b93cdb" }
async-trait = "0.1.68"


clap = { version = "4", features = ["cargo", "derive"] }


[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "a"
harness = false
# simd-json = { path = "../simd-json" }
