[package]
name = "rust-tmp"
version = "0.1.114514"
edition = "2021"

[workspace]
members = ["src/utils", "src/wasm-component", "src/wasm-evil"]

[profile.release]
debug = 1
# lto = 'thin'

[dependencies]
anyhow = "1.0"

# arrow-array = "40"
# arrow-flight = "40"
# arrow-ipc = "40"
# arrow-schema = "40"
# arrow-select = "40"

# wasmtime = { version = "11", features = ["component-model"] }
# # We need preview2-prototyping https://github.com/bytecodealliance/wasmtime/pull/6391
# wasmtime-wasi = { version = "11" }
async-trait = "0.1.68"

clap = { version = "4", features = ["cargo", "derive"] }
dotenv = "0.15.0"

env_logger = "0.10.0"
futures = "0.3.27"

futures-async-stream = "0.2.0"
hyper = { version = "0.14", features = ["server", "http2", "tcp", "http1"] }
log = "0.4.17"
rand = "0.8.5"
# rdkafka = { version = "0.29.0", features = ["ssl"] }
regex = "1.7.3"
rsa = "0.8.2"

simd-json = "0.10"

tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "process",
    "full",
] }
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", rev = "97db777" }
tokio-util = { version = "0.7", features = ["codec"] }

# tonic = "0.9"
# aws-sdk-s3 = { version = "0.28.0", default-features = false, features = [
#     "rt-tokio",
#     "native-tls",
# ] }
# aws-config = { version = "0.55.1", default-features = false, features = [
#     "rt-tokio",
#     "native-tls",
# ] }
# aws-credential-types = { version = "0.55.1", features = [
#     "hardcoded-credentials",
# ] }
# hyper-tls = "0.5.0"
# aws-smithy-client = { version = "0.55.1", default-features = false, features = [
#     "rt-tokio",
#     "native-tls",
# ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utils = { path = "src/utils" }

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "a"
harness = false
# simd-json = { path = "../simd-json" }
