[package]
name = "rust-tmp"
version = "0.1.114514"
edition = "2021"

[workspace]
members = ["src/utils", "src/wasm-component", "src/wasm-evil"]

[profile.release]
debug = 1
# lto = 'thin'

[dependencies]
anyhow = "1.0"

arrow-array = "40"
arrow-flight = "40"
arrow-ipc = "40"
arrow-schema = "40"
arrow-select = "40"

async-trait = "0.1.68"

clap = { version = "4", features = ["cargo", "derive"] }
dotenv = "0.15.0"

env_logger = "0.10.0"
expect-test = "1.4.1"
futures = "0.3.27"

futures-async-stream = "0.2.0"
hyper = { version = "0.14", features = ["server", "http2", "tcp", "http1"] }
log = "0.4.17"
rand = "0.8.5"
# rdkafka = { version = "0.29.0", features = ["ssl"] }
regex = "1.7.3"
rsa = "0.8.2"
serde = { version = "1.0.193", features = ["derive", "alloc"] }
serde-value = "0.7.0"
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["json"] }

simd-json = "0.10"

tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "process",
    "full",
] }
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", rev = "97db777" }
tokio-util = { version = "0.7", features = ["codec"] }

# tonic = "0.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utils = { path = "src/utils" }

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "a"
harness = false
# simd-json = { path = "../simd-json" }

[[bench]]
name = "async"
harness = false

[workspace.lints.rust]
dead_code = "allow"

[lints]
workspace = true
