[package]
name = "rust-tmp"
version = "0.1.114514"
edition = "2021"

[workspace]
members = ["src/utils", "src/wasm-component", "src/wasm-evil"]

[profile.release]
debug = 1
# lto = 'thin'

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.0"
expect-test = "1.4.1"
futures = "0.3.27"
anyhow = "1.0"
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
itertools = "0"

arrow-array = "40"
arrow-flight = "40"
arrow-ipc = "40"
arrow-schema = "40"
arrow-select = "40"

async-trait = "0.1.68"

clap = { version = "4", features = ["cargo", "derive", "env"] }

educe = "0.5.9"


futures-async-stream = "0.2.0"
hyper = { version = "0.14", features = ["server", "http2", "tcp", "http1"] }
rand = "0.8.5"
# rdkafka = { version = "0.29.0", features = ["ssl"] }
regex = "1.7.3"
rsa = "0.8.2"
serde = { version = "1.0.193", features = ["derive", "alloc"] }
serde-value = "0.7.0"
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["json"] }

simd-json = "0.10"


# tonic = "0.9"
utils = { path = "src/utils" }

opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.13"
tracing-opentelemetry = "0.22"
opentelemetry-stdout = { version = "0.2", features = ["trace"] }

thiserror-ext = "0.1.0"
thiserror = "1"
jni = "0.21.1"

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "a"
harness = false
# simd-json = { path = "../simd-json" }

[[bench]]
name = "async"
harness = false

[workspace.lints.rust]
dead_code = "allow"

[lints]
workspace = true
