[package]
name = "kafka-tmp"
version = "0.1.114514"
edition = "2021"

[dependencies]
# rdkafka = { version = "0.36.0", features = ["ssl"] }
rdkafka = { package = "madsim-rdkafka", version = "0.4.1", features = [
    "cmake-build",
    "ssl",
] }
clap = { version = "4", features = ["cargo", "derive"] }


dotenv = "0.15.0"
env_logger = "0.11.0"
expect-test = "1.4.1"
futures = "0.3.27"
anyhow = "1.0"
log = "0.4.17"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
itertools = "0"

[dev-dependencies]


[workspace.lints.rust]
dead_code = "allow"

[lints]
workspace = true
